add more test date

--- a/src/JSONQuery/README
+++ b/src/JSONQuery/README
@@ -1,1 +1,24 @@
 an experimental JSONPath implementation in go
+
+defines the state of a JSONQuery string
+
+$
+@
+.x
+..x
+['xx']
+
+
+
+ROOT:            ROOT
+INDEXING:
+FIELDING:
+
+
+
+CHILD:           DOT_CHILD | ARRAY_CHILD
+INDEX:           ARRAY_OPEN ( INDEX_CHARACTER* | WILDCARD ) ARRAY_CLOSE
+DOT_CHILD:       DOT SIMPLE_NAME
+ARRAY_CHILD:     ARRAY_OPEN ( QUOTE COMPLEX_NAME QUOTE | DOUBLE_QUOTE COMPLEX_NAME DOUBLE_QUOTE ) ARRAY_CLOSE
+SIMPLE_NAME:     SIMPLE_NAME_CHARACTER* | WILDCARD
+COMPLEX_NAME:    COMPLEX_NAME_CHARACTER* | WILDCARD
